# Revision_CrewAi

./: .env  app.py  pyproject.toml  streamlit.py
src/project20/: __init__.py  agents.py  main.py  tasks.py
