[project]
name = "project20"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Muhammad Uzair", email = "uzairyasin83@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "crewai>=0.108.0",
    "crewai-tools>=0.38.1",
    "streamlit>=1.44.0",
]

[project.scripts]
project20 = "project20:main"
book = "project20.main:Writer"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
